--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.17.1",
+    "chart.js": "^2.9.3",
+    "flexbox-react": "^4.4.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-rt-chart": "^2.0.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
